fix an overflow, add separate large config

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -135,3 +135,10 @@ body {
   width: 100%;
   overflow: hidden;
 }
+
+.ui.dropdown > .text {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  width: 100%;
+  overflow: hidden;
+}
